replace 1000 to 1000000 in qt

--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -269,7 +269,7 @@
             <number>10</number>
            </property>
            <property name="value">
-            <number>1000</number>
+            <number>1000000</number>
            </property>
           </widget>
          </item>
